--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -2,6 +2,8 @@ name: Create Pull Request
 
 on:
   push:
+    branches:
+      - your-branch-name  # Substitua 'your-branch-name' pela branch onde você faz os commits
 
 jobs:
   create-pr:
@@ -12,9 +14,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up GitHub CLI
-      uses: cli/cli-action@v2
-      with:
-        gh-version: 'latest'
+      run: sudo apt-get install gh
 
     - name: Create Pull Request
       run: |
