--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -2,6 +2,8 @@ name: Create Pull Request
 
 on:
   push:
+    branches:
+      - feature/version  # Substitua 'feature/version' pela branch onde você faz os commits
 
 jobs:
   create-pr:
@@ -16,7 +18,6 @@ jobs:
 
     - name: Create Pull Request
       run: |
-        gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
-        gh pr create --base main --head your-branch-name --title "Auto PR" --body "Automated pull request created by GitHub Actions"
+        gh pr create --base main --head feature/version --title "Auto PR" --body "Automated pull request created by GitHub Actions"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
